# libkovanserial

./: CMakeLists.txt  Readme.markdown
doc/: communication_sample.dot  security.aux  security.out  security.tex
include/kovanserial/: command_types.hpp  compat.hpp  crc.h  general.hpp  kovan_serial.hpp  kovan_server.hpp  md5.hpp  randomize.hpp  serial_comm.hpp  sha1.hpp  tcp.hpp  tcp_serial.hpp  tcp_server.hpp  transmitter.hpp  transport_layer.hpp  udp_advertiser.hpp  usb_serial.hpp  usb_serial_unix.hpp  usb_serial_win.hpp  xor.hpp
src/: crc.c  general.cpp  kovan_serial.cpp  kovan_server.cpp  md5.cpp  randomize.cpp  serial_comm_unix.cpp  sha1.cpp  socket_utils.cpp  tcp.cpp  tcp_serial.cpp  tcp_server.cpp  transport_layer.cpp  udp_advertiser.cpp  usb_serial_unix.cpp  usb_serial_win.cpp  xor.cpp
test/: CMakeLists.txt  auth.cpp  client.cpp  heartbeat.cpp  recv_action.cpp  screenshot.cpp  send_action.cpp  send_file.cpp  server.cpp  sha1_test.cpp
